test/files/neg/sammy_disabled.scala
trait F { def apply(x: Int): String }

class C { val f: F = x => "a" }
